--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "contactbook-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "script": {
+ "start": "nodemon server.js"
+ },
   "author": "Trong Nguyen",
   "license": "ISC",
   "description": "",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
+    "nodemon": "^3.1.9",
     "prettier": "^3.5.3"
   }
 }
