Dinh nghia cac route cho tai nguyen Contact

--- a/package.json
+++ b/package.json
@@ -3,19 +3,34 @@
   "version": "1.0.0",
   "main": "server.js",
   "script": {
- "start": "nodemon server.js"
- },
+    "start": "nodemon server.js"
+  },
   "author": "Trong Nguyen",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1"
   },
   "devDependencies": {
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/trongnguyen-npt/CK23V7K535_Nguyen_Phuoc_Trong-_BACKEND.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/trongnguyen-npt/CK23V7K535_Nguyen_Phuoc_Trong-_BACKEND/issues"
+  },
+  "homepage": "https://github.com/trongnguyen-npt/CK23V7K535_Nguyen_Phuoc_Trong-_BACKEND#readme",
+  "description": ""
 }
